# security-scanner-mcp

./: README.md  pyproject.toml
src/security_scanner/: __init__.py  server.py
